Closed Bug 1550523 Opened 6 years ago Closed 6 years ago

Print preview not showing image on Animated .GIF, on Windows 10 with WebRender graphics backend

Categories

(Core :: Graphics: WebRender, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- wontfix
firefox67 --- wontfix
firefox68 --- verified
firefox69 --- verified

People

(Reporter: muirpablo, Assigned: aosmond)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

[Affected versions]:
Nightly 68.0a1

[Affected platforms]:
Platforms: WINDOWS10

[Steps to reproduce]:

1)Open this site link in firefox: http://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif
2)Click Option menu, then Print the site to an actual printer.
3)Image preview screen appears but there is no image.

Expected result:
The gif image should appear on print preview

Actual Results:
The gif image is not showing up on print preview

Results from the Mozregression:
We also tried getting a regression range for this issue but we kept getting some build errors and this is the best we could do, if any of you guys can take a look and see what the culprit might be

Here are the results from the Mozregression:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=68941a0829dc729a979b25061c258ae51859a5a4&tochange=37103bfa3dca5149f414cc6265d24fd752a4385f

Version: 68 Branch → Trunk

In that range, this looks particularly suspicious, for a "something's not showing up" bug like this one:

Bug 1523823. Enable WebRender by default on modern (CIK, VI, GFX9) desktop AMD hardware. r=kats

Could you check about:support to see if you have WebRender enabled, and (if so) test whether this reproduces if you turn it off? (I think that setting about:config gfx.webrender.force-disabled = true will force it off, though you may have to restart Nightly after making that change.)

Flags: needinfo?(pablo.muir)

Hi there!
Here is the data

On about:Support > available by user: Qualified enabled by pref
I went to about:config and searched for gfx.webrender.force-disabled (it was set as false)
The image on print preview did not show up

Then on about:config , gfx.webrender.force-disabled i changed it to TRUE
Closed and launched firefox again and i was able to see the image on print preview.
on about:Support > disabled by user: User force-disabled WR

regards

Flags: needinfo?(pablo.muir)

Then on about:config , gfx.webrender.force-disabled i changed it to TRUE
Closed and launched firefox again and i was able to see the image on print preview.

Thanks! It sounds like the bug goes away when you turn off WebRender then. So, this is a bug that is specific to our WebRender backend.

--> reclassifying accordingly.

Component: Print Preview → Graphics: WebRender
Summary: W10 Print preview not showing image on Animated .GIF → Print preview not showing image on Animated .GIF, on Windows 10 with WebRender graphics backend

Andrew can you take a look?

Blocks: wr-67
Flags: needinfo?(aosmond)
Priority: -- → P2

Tested it on Windows10:

Firefox Release 66.0.5 : It is working
Firefox Beta : 67.0 : It is working
Firefox Nigtly 68.0a1: It does not work.

Assignee: nobody → aosmond

This is not a recent regression. I could reproduce on very old WebRender builds. It appears that if the static image is already in the cache, it will render correctly. You can reproduce this by opening the print preview, noting its failure, closing it, reopening it and noting its success. So it looks like a notification is being missed somewhere. Normally you already have the images already decoded because you see them on screen, but a first frame only decoding is kicked off for animated images after the fact.

With WebRender, we had observed that the print preview for animated
images was not displaying correctly. It should display the first frame
but it was showing nothing the first time the preview was opened. Once
the decoded image was available in the cache, it would display
correctly if the preview was reloaded.

The StartDecoding and RequestDecode variants always requested
FRAME_CURRENT for animated images. They should use FRAME_FIRST for
static requests / FrozenImage. Correcting this fixes the print preview.

Flags: needinfo?(aosmond)
Blocks: wr-68
No longer blocks: wr-67
Pushed by aosmond@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a479292cb15c Ensure that decoding methods for frozen images request the correct frame. r=tnikkel
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

P2, only affects Webrender users and does not affect browsing, given the size of the patch and the current impact, I am marking it as wontfix for 67.

Comment on attachment 9066491 [details]
Bug 1550523 - Ensure that decoding methods for frozen images request the correct frame.

Beta/Release Uplift Approval Request

  • User impact if declined: Print preview may show incorrectly if there is an animated image with WebRender.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch adds a parameter to allow a caller to select what frame we would like to initiate decoding for, the first frame (for print preview) or the current frame (for drawing). We change this only on the FrozenImage code path, which is primarily used just for printing. Even if the wrong frame was displayed, right now it doesn't display anything, so it is unlikely to cause a further regression.
  • String changes made/needed: None
Attachment #9066491 - Flags: approval-mozilla-beta?

I verified this now works on Linux and Windows nightly, when previously it would fail for me.

Comment on attachment 9066491 [details]
Bug 1550523 - Ensure that decoding methods for frozen images request the correct frame.

print preview fix for WR; approved for beta68

Attachment #9066491 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I am not able to reproduce this issue. I tried the steps from comment 0 and from comment 2, but with no success of reproducing the bug.
Can you please give me some additional info about how you managed to reproduce it?
Thank you.

Flags: needinfo?(aosmond)

Please force-enable WebRender by gfx.webrender.all and restart Firefox if your device is not qualified yet.

(Pablo from comment #0)

1)Open this site link in firefox: http://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif
2)Click Option menu, then Print the site to an actual printer.

a) Main menu > Print
b) <Alt> > File > Print Preview

3)Image preview screen appears but there is no image.

Verified fixed:

  • Nightly 69: Win10/GTX1060, Debian Testing/Macbook Pro
  • Beta 68.0b5: Win10/GTX1060

Wontfix:

  • Stable 67
Status: RESOLVED → VERIFIED
Flags: needinfo?(aosmond)

I managed to reproduce the issue using an older version of Nightly (2019-05-09) on Windows 10 x64.
I retested everything using Nightly 69.0a1 and Firefox 68.0b5 on Windows 10 x64 and Ubuntu 18.04 x64 and the bug is not reproducing anymore.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: