Bug 1550523 - Ensure that decoding methods for frozen images request the correct frame. r=tnikkel a=jcristau

With WebRender, we had observed that the print preview for animated
images was not displaying correctly. It should display the first frame
but it was showing nothing the first time the preview was opened. Once
the decoded image was available in the cache, it would display
correctly if the preview was reloaded.

The StartDecoding and RequestDecode variants always requested
FRAME_CURRENT for animated images. They should use FRAME_FIRST for
static requests / FrozenImage. Correcting this fixes the print preview.


Differential Revision: https://phabricator.services.mozilla.com/D32033

--HG--
extra : source : a479292cb15ca5db48aa280cf3bec0e585ad8ed4
extra : histedit_source : 9e6afc429bedaad208ede9ae138afebfd4ea1b74